Fixes to responsiveness and scrollbar

--- a/Styles/_animations.scss
+++ b/Styles/_animations.scss
@@ -341,7 +341,7 @@
         width: 0;
     }
     100% {
-        width: calc(100vw - 307px);
+        width: 100vw;
     }
 }
 
