--- a/Styles/_global.scss
+++ b/Styles/_global.scss
@@ -1,5 +1,8 @@
 html {
     scroll-behavior: smooth;
+    
+    scrollbar-width: thin;
+    scrollbar-color: rgb(129, 91, 9) rgb(26, 17, 0);
 }
 
 .user-css,
@@ -17,6 +20,7 @@ html {
     --c-gold-dim: rgb(187, 128, 0);
     --c-gold-dimmer: rgb(129, 91, 9);
     --c-gold-dark: rgb(88, 61, 3);
+    --c-gold-darkest: rgb(26, 17, 0);
     --c-gold-gradient: linear-gradient(
         90deg,
         rgba(88, 61, 3, 1) 0%,
@@ -41,6 +45,24 @@ html {
     --c-gray-light: rgb(113, 124, 142);
 
     scroll-behavior: smooth;
+}
+
+.user-css-presentation {
+    &::-webkit-scrollbar {
+        width: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: var(--c-gold-darkest);
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: var(--c-gold-dimmer);
+
+        &:hover, &:focus {
+            background: var(--c-gold);
+        }
+    }
 }
 
 .user-css-viewer {
